K8s/auth_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-auth
  template:
    metadata:
      labels:
        app: server-auth
    spec:
      containers:
        - name: server-auth
          image: quay.io/emar97/server_auth_image
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config.json
              subPath: config_auth.json
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: server-auth-config


---
apiVersion: v1
kind: Service
metadata:
  name: server-auth
spec:
  selector:
    app: server-auth
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
