K8s/conversation_bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversation-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conversation-bot
  template:
    metadata:
      labels:
        app: conversation-bot
    spec:
      containers:
        - name: conversation-bot
          image: quay.io/emar97/conversation_bot_image
          volumeMounts:
            - name: config-volume
              mountPath: /app/config.json
              subPath: config_conversation_bot.json
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: conversation-bot-config
---
apiVersion: v1
kind: Service
metadata:
  name: conversation-bot
spec:
  selector:
    app: conversation-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
