K8s/zookeeper.yaml
# kubectl apply -f K8s/zookeeper.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
spec:
  serviceName: "zookeeper"
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:latest
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
    - name: zookeeper
      protocol: TCP
      port: 2181
      targetPort: 2181


# kubectl exec -it zookeeper-0 /bin/sh
# kafka-topics --create   --bootstrap-server kafka:9092 --replication-factor 1   --partitions 100   --topic frame_data
# kafka-topics --create   --bootstrap-server kafka:9092 --replication-factor 1   --partitions 1   --topic frame_info
# kafka-topics --create   --bootstrap-server kafka:9092 --replication-factor 1   --partitions 1   --topic notification
