K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /prometheus(/|$)(.*)
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
          - pathType: Prefix
            path: /access(/|$)(.*)
            backend:
              service:
                name: server-auth
                port:
                  number: 8080
          - pathType: Prefix
            path: /commands(/|$)(.*)
            backend:
              service:
                name: server-command
                port:
                  number: 8081
          - pathType: Prefix
            path: /api(/|$)(.*)
            backend:
              service:
                name: server-main
                port:
                  number: 8082
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
# kubectl apply -f K8s/ingress.yaml4
# http://localhost/prometheus/api/v1/query?query=exposer_transferred_bytes_total
